“上传网站源码到github”

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 			 color:black;                      /* 字体颜色 */
 			 font-family: "LiSu";              /* 文本字体样式-----隶书 */
 		}
+		.fubiaoti{
+			color: red ;
+			font-size: 25px;
+			text-align: center; 
+		}
+		
 	</style> 
 	<body>
 		<h1 class="biaoti"> 个人简历</font></h1>
+		<h1 class="fubiaoti">田雪18岁生日快乐！！</h1>
 	</head>
 	
 		
