“上传网站源码到github”

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>个人简历</title>
+		<title>雪儿，生日快乐！！</title>
+		<Link Rel="SHORTCUT ICON" href="img/QQ图片20191017164332.jpg">
 		<style type="text/css">
 		.biaoti{
 			 text-align: center;               /* 文本居中 */
-			 color:black;                      /* 字体颜色 */
+			 color:black;                        /* 字体颜色 */
 			 font-family: "LiSu";              /* 文本字体样式-----隶书 */
+			 font-size: 45px;   
+			 margin-top: 60px;         
 		}
 		.fubiaoti{
 			color: red ;
@@ -17,8 +20,7 @@
 		
 	</style> 
 	<body>
-		<h1 class="biaoti"> 个人简历</font></h1>
-		<h1 class="fubiaoti">田雪18岁生日快乐！！</h1>
+		<h1 class="biaoti">祝雪儿18岁生日快乐！！ </font></h1>
 	</head>
 	
 		
