“上传网站源码到github”

--- a/index.html
+++ b/index.html
@@ -17,10 +17,30 @@
 			font-size: 25px;
 			text-align: center; 
 		}
+		.diyilan{
+			margin: 60px;
+			
+		}
+	
+		.tuyi{
+			width: 260px;
+			height: 270px;
+			margin-left: 15px;
+			margin-top: 15px;
+		}
 		
 	</style> 
 	<body>
 		<h1 class="biaoti">祝雪儿18岁生日快乐！！ </font></h1>
+		<div class="diyilan">
+			<img class="tuyi" src="img/1.jpg">
+			<img class="tuyi" src="img/2.jpg">
+			<img class="tuyi" src="img/3.jpg">
+			<img class="tuyi" src="img/4.jpg">
+		</div>
+		<div>
+			
+		</div>
 	</head>
 	
 		
